# sbj-accounting

./: .gitignore  BUILD_SPEC.md  CLAUDE.md  FEATURES.md  IMPLEMENTATION_PLAN.md  README.md  khata.spec  prototype.html  pyproject.toml  requirements.txt  todo
.claude/: settings.json
.github/workflows/: build-windows.yml
app/: __init__.py  config.py  db.py  killswitch.py  launcher.py  main.py  runtime.py
app/auth/: __init__.py  deps.py  security.py  service.py
app/crypto/: __init__.py  keyfile.py
app/models/: __init__.py  auth.py  base.py  cash.py  ledger.py  masters.py  order.py  purchase.py  system.py  user.py
app/routers/: _contacts.py  auth.py  cash.py  customers.py  dashboard.py  import_.py  ledgers.py  lookups.py  orders.py  parties.py  purchases.py  reports.py  settings.py  system.py  users.py
app/schemas/: cash.py  masters.py  orders.py  purchases.py  users.py
app/services/: __init__.py  audit.py  backdating.py  backup.py  cash.py  dashboard.py  dateranges.py  import_data.py  import_template.py  ledger.py  matching.py  orders.py  purchases.py  report_export.py  reports.py  seed.py  (+1 more)
scripts/: check_features_updated.sh  install_sqlcipher.sh  make_sample_import.py
tests/: conftest.py  test_app.py  test_audit.py  test_auth.py  test_backdating.py  test_cash_purchases.py  test_config_storage.py  test_dashboard.py  test_encryption.py  test_import.py  test_keyfile.py  test_killswitch.py  test_masters_api.py  test_matching.py  test_migration_v4.py  test_migration_v7.py  test_orders.py  test_packaging.py  test_report_export.py  test_reports.py  test_seed.py
(+16 files in other folders)
